# ComfyUI-Mana-Nodes

./: .gitignore  LICENSE  README.md  __init__.py  audio2video_node.py  example_workflow.json  font2img_node.py  logger.py  pyproject.toml  requirements.txt  speech2text_node.py  string2file_node.py  text2speech_node.py  utils.py  video2audio_node.py
example_workflows/: example1.json  example2.json  example_workflow_1.json  example_workflow_2.json
helpers/: logger.py
nodes/: animation_settings_node.py  audio2video_node.py  canvas_settings_node.py  color_animations_node.py  font2img_node.py  scheduled_element_node.py  scheduled_values_node.py  speech2text_node.py  string2file_node.py  text2speech_node.py  text_graphic_element_node.py  video2audio_node.py
web/js/: scheduled_values.js  text_preview.js  vid_preview.js  vid_upload.js
